discussion/kv_engine/156557/156557_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Add mcbp_fuzz_test

mcbp_fuzz_test is a small test program which use libFuzzer
(https://llvm.org/docs/LibFuzzer.html) to test the package
validation code.

The program is not built by default, and you need to explicitly
add -DBUILD_MCBP_FUZZ_TEST=ON when invoking CMake (Note: you
should also be using clang and have libfuzzer available. This
is not checked by CMake in this patch)

Once built it may be run with:

    ./mcbp_fuzz_test -max_len=32

(There isn't much value of larger values as the packet header
is the first 32 bytes).

To make sure that we run as much as the server code as possible
the signature for Cookie::validate() was changed to allow bypass
of logging and exceptions for illegal packets.

A natural extension to this fuzz test would be:

1. Open a socket, auth and select bucket and then send the packet
   over the wire (it would also validate the execution on the
   server which should be running with asan)

2. Change the fuzz-method so that we only fuzz _part_ of the
   header. Some of our commands require JSON payload, and the
   odds of the fuzzer generating JSON is relatively low. (There
   may be other fuzzers which does a better job at this. We don't
   need to fuzz-test random values for opaque for instance),

Change-Id: I74da642ce6f9623feb4598549418285e3ac5f12e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-29 08:53:08.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-29 09:11:52.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10299/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10:
error: "subdoc/operations.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10299/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10: error: "subdoc/operations.h" file not found [clang-diagnostic-error]
#include <subdoc/operations.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10299/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12352/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19912/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19912/ )

Undefined Sanitizer: home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/objectregistry.cc:119:49: runtime error: member call on address 0x61d000019a80 which does not point to an object of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19912/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37400/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31899/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8902/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12020/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10950/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11869/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-29 13:18:35.000000000
Message: 
Patch Set 7:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10299/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10:
error: "subdoc/operations.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10299/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10: error: "subdoc/operations.h" file not found [clang-diagnostic-error]
#include <subdoc/operations.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10299/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19912/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19912/ )

Undefined Sanitizer: home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/objectregistry.cc:119:49: runtime error: member call on address 0x61d000019a80 which does not point to an object of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19912/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12354/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37400/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31899/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8902/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12020/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10950/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11869/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-29 13:28:20.000000000
Message: 
Patch Set 7: Code-Review-1

(2 comments)

I can also setup a kv_enigne.libfuzzer CV job with the new mode to run this stuff - possibly add a nightly (weekly?) job which runs the fuzzer in "search" mode for say a fixed duration...
Line:461, daemon/cookie.cc -> This probably shouldn't really throw in the first place - it's not "exceptional" in the sense it's user data which could have anything in it (and hence a malicious user could make us pay to throw & catch exceptions).

I think we are better to just have this function return status codes (Einval) for invalid packets (irrespective of fuzz mode or not).

Line:72, protocol/mcbp/CMakeLists.txt -> Given one gets better results if the fuzzer can record profile / coverage information for all code under test, I think a better activation method would be to add a CB_LIBFUZZER top-level CMake option (like CB_ADDRESSSANITIZER), and then make the code here conditional on that flag.

We could also add a add_test() for the fuzzer with the existing crash input (./mcbp_fuzz_test ./crash-*) as a regression test for found issues.

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-29 16:11:59.000000000
Message: 
Patch Set 7:

(1 comment)
Line:461, daemon/cookie.cc -> So this is a bit "magic" in this function that if we return a status code here we return that status code to the client, but if we throw an exception the socket gets disconnected (and the idea here is to disconnect as we might be completely "out of sync" protocol wise).

I don't think this check is in play anymore (as we've already checked that the header is valid as part of picking out the packet from the bufferevent stream).

----------------------------------------------------------------------------------------------------------------------
